--- a/app/upcoming.html
+++ b/app/upcoming.html
@@ -39,7 +39,10 @@
           <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
               <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
               <div class="cardFooter">
-                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                <p class="cardContent">
+                  There are many upcoming additions to this website! This is a work in progress and is constantly being updated so check back for new content soon!
+
+                </p>
               </div>
             </div>
       </div>
@@ -48,7 +51,9 @@
           <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg'); -webkit-filter: blur(5px);  filter: blur(5px);">
               <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
               <div class="cardFooter">
+                <p class="cardContent">
                   Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                </p>              
               </div>
             </div>
       </div>
@@ -57,7 +62,9 @@
           <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_TDial.jpg')">
               <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
               <div class="cardFooter">
+                <p class="cardContent">
                   Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                </p>   
               </div>
             </div>
       </div>
@@ -65,7 +72,9 @@
           <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
               <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
               <div class="cardFooter">
+                <p class="cardContent">
                   Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                </p>   
               </div>
             </div>
       </div>
@@ -94,6 +103,18 @@
       <div class="spacer"></div>
     </div>
     
+
+    <div class="footer">
+      <ul class="footerLinksContainer">
+        <li><a href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a href="./work">My Work</a></li>
+        <li><a href="./upcoming">Upcoming</a></li>
+        <li><a href="./upcoming">Contact</a></li>
+      </ul>
+    </div>
+
+
     <script src='./top-nav.js'></script>
     <script src='./app.js'></script>
 
