--- a/app/work.html
+++ b/app/work.html
@@ -69,7 +69,8 @@
           <li><a href="./">Home</a></li>
           <li><a href="./about">About</a></li>
           <li><a href="./work">My Work</a></li>
-          <li><a href="./offline">Upcoming</a></li>
+          <li><a href="./upcoming">Upcoming</a></li>
+          <li><a href="./upcoming">Contact</a></li>
       </ul>
   </div>
 
