--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,9 @@
         <div class="mainImgLeftContainerBefore">
             <img src="../images/Tom_at_Etowah_1980.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. “In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us
+                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us"
+                    <br/>
+                    - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
                 </p>
             </div>
         </div>
@@ -99,7 +101,7 @@
         <div class="mainImgLeftContainerBefore">
             <img src="./images/tom_in_front_of_nerve_museum_sign.jpg"  class="headerImgLeft" alt="Tom In front of Thornton Dial Painting"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. “In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
+                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
                 <br/>
                 - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
                 </p>
@@ -148,7 +150,8 @@
               <li><a href="./">Home</a></li>
               <li><a href="./about">About</a></li>
               <li><a href="./work">My Work</a></li>
-              <li><a href="./offline">Upcoming</a></li>
+              <li><a href="./upcoming">Upcoming</a></li>
+              <li><a href="./upcoming">Contact</a></li>
           </ul>
       </div>
 
