footer fixes and mobile preview essay bug repaired

--- a/app/about.html
+++ b/app/about.html
@@ -165,10 +165,11 @@
 
     <div class="footer">
       <ul class="footerLinksContainer">
-        <li><a href="./">Home</a></li>
-        <li><a href="./about">About</a></li>
-        <li><a href="./work">My Work</a></li>
-        <li><a href="./offline">Upcoming</a></li>
+          <li class="borderedFooterLink"><a href="./">Home</a></li>
+          <li class="borderedFooterLink"><a href="./about">About</a></li>
+          <li class="borderedFooterLink"><a href="./work">Work</a></li>
+          <li class="borderedFooterLink"><a href="./upcoming">Upcoming</a></li>
+          <li id="finalFooterLink"><a href="./contact">Contact</a></li>
       </ul>
     </div>
 
