--- a/app/work.html
+++ b/app/work.html
@@ -64,15 +64,17 @@
     
     </div>
 
+    <a href="/essays/ingrained_images_and_outside_influences.pdf" target="_blank">Click me!</a>
+
     <div class="footer">
       <ul class="footerLinksContainer">
-          <li><a href="./">Home</a></li>
-          <li><a href="./about">About</a></li>
-          <li><a href="./work">My Work</a></li>
-          <li><a href="./upcoming">Upcoming</a></li>
-          <li><a href="./upcoming">Contact</a></li>
+          <li class="borderedFooterLink"><a href="./">Home</a></li>
+          <li class="borderedFooterLink"><a href="./about">About</a></li>
+          <li class="borderedFooterLink"><a href="./work">Work</a></li>
+          <li class="borderedFooterLink"><a href="./upcoming">Upcoming</a></li>
+          <li id="finalFooterLink"><a href="./contact">Contact</a></li>
       </ul>
-  </div>
+    </div>
 
     <script src='./top-nav.js'></script>
     <script src='./app.js'></script>
