--- a/app/index.html
+++ b/app/index.html
@@ -145,14 +145,14 @@
 
 
 
-      <div class="footer">
-          <ul class="footerLinksContainer">
-              <li><a href="./">Home</a></li>
-              <li><a href="./about">About</a></li>
-              <li><a href="./work">My Work</a></li>
-              <li><a href="./upcoming">Upcoming</a></li>
-              <li><a href="./upcoming">Contact</a></li>
-          </ul>
+    <div class="footer">
+        <ul class="footerLinksContainer">
+            <li class="borderedFooterLink"><a href="./">Home</a></li>
+            <li class="borderedFooterLink"><a href="./about">About</a></li>
+            <li class="borderedFooterLink"><a href="./work">Work</a></li>
+            <li class="borderedFooterLink"><a href="./upcoming">Upcoming</a></li>
+            <li id="finalFooterLink"><a href="./contact">Contact</a></li>
+        </ul>
       </div>
 
       
