Toms requested changes and tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,11 @@
         <img class="profileImg" src="../images/TomSpeaking.jpg"/>
         <div class="frontPageTextBoxHeader">
           <h1 class="headerText">Tom Patterson</h1>
-          <h3 class="headerSubText">Author and Independent Curator of Outsider Art</h3>
+          <h3 class="headerSubText">Autonomous Writer and Independent Curator</h3>
         </div>
 
         <div class="frontPageTextBox">
-            <h4>A Note from Tom Patterson</h4>
+            <h4>Dear Visitor/Reader,</h4>
             <p>
                 Welcome to my website, The Nerve Museum, serving mainly as a forum for selected things I’ve written over the years - essays, reviews, articles, and other pieces that seem to have some continued relevance or retrospective value. So I hope. The primary categories are contemporary art and culture, with a particular focus on what is now commonly called Outsider Art, after the title of an influential book by the late cultural scholar Roger Cardinal. As the author of my own books about Saint EOM (Eddie Owens Martin) and Howard Finster, both originally published in the late 1980s, I was pegged relatively early in my career as an authority on Outsider Art in the American South. I claim no authority other than that of an attentive writer, but I admit to having a longstanding interest in and enthusiasm for the subject, as a result of which I‘ve often been commissioned to write essays, deliver talks, or curate exhibitions related to the topic. 
             </p>
@@ -53,9 +53,9 @@
         <div class="mainImgLeftContainerBefore">
             <img src="../images/Tom_at_Etowah_1980.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us"
+                <p class="imageCaptionText" sstyle="line-height: 2em;">Tom Patterson at the Etowah National Monument near Cartersville, Georgia, 1980. 
                     <br/>
-                    - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
+                    Photograph by Jonathan Williams.
                 </p>
             </div>
         </div>
@@ -64,6 +64,8 @@
             <h4>What is the Nerve Museum? </h4>
             <p>
                 Since 1992 my primary residence has been a garret apartment in a 1920s bungalow in a small city in North Carolina. Most of the wall space is covered with paintings, drawings, photographs, and other works by artists I’ve written about or been associated with, and most of the furniture serves as storage for a personal library of some 2,000 books. Volumes not shelved tend to be neatly stacked on tables, chairs, or other available surfaces. Three walk-in storage closets function mainly as repositories for my files, archives, and additional artworks in various mediums. 
+            </p>
+            <p>
                 When my late brother Hunter visited in 1995, he (jokingly) observed that the place made him nervous, constantly concerned that he might accidentally knock something over and start a chain reaction of collapsing and overturned objects - a chaotic jumble of books and art, possibly damaged. Hunter took to calling the premises my Nerve Museum - a catchy name, so I adopted it.
 
             </p>
@@ -81,8 +83,7 @@
         <div class="mainImgRightContainerBefore">
             <img src="./images/nerve_museum_sign.jpg"  class="headerImgRight" alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"/>
             <div class="imageCaptionContainer imageCaptionContainerRight"> 
-                <p class="imageCaptionText" sstyle="line-height: 2em;">Several years ago I commissioned the artist Hieronymus to paint a NERVE MUSEUM sign for the stairwell leading up to my humble garret. This is the work that hangs in my house to this day
-                Anyway, it seemed the perfect name for the website.
+                <p class="imageCaptionText" sstyle="line-height: 2em;">Several years ago I commissioned the artist Hieronymus to paint a NERVE MUSEUM sign for the stairwell leading up to my humble garret. 
             </p>
             </div>
         </div>
@@ -101,7 +102,7 @@
         <div class="mainImgLeftContainerBefore">
             <img src="./images/tom_in_front_of_nerve_museum_sign.jpg"  class="headerImgLeft" alt="Tom In front of Thornton Dial Painting"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
+                <p id="juliaSternExcerpt" class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
                 <br/>
                 - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
                 </p>
@@ -127,7 +128,9 @@
         <img src="../images/Tom_with_Mose_Tolliver.jpg"  class="headerImgRight" alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"/>
         <div class="imageCaptionContainer imageCaptionContainerRight">
             <p class="imageCaptionText" sstyle="line-height: 2em;">
-                The wonderful artist Mose Tolliver and myself at his house in Montgomery, Alabama (c 1993) discussing his views on outsider art and its influence on the broader art world. 
+                With artist Mose Tolliver at Tolliver's home in Montgomery, Alabama, 1993. 
+                <br/>
+                Photograph by Lynne Ingram.
             </p> 
         </div>
     </div>
