adding image and reformatting

--- a/app/about.html
+++ b/app/about.html
@@ -45,26 +45,41 @@
 
     <img class="profileImg" src="../images/TomSpeaking.jpg" />
     <div class="frontPageTextBoxHeader">
-      <h1 class="headerText">About Patterson</h1>
+      <h1 class="headerText">About Tom Patterson</h1>
     </div>
 
-    <div class="frontPageTextBox">
-      <p>
-        "Art is ubiquitous in everyday life. We encounter it practically from
-        birth, even if it doesn’t always speak to us. Critic and curator Tom
-        Patterson knows this." - Julian Stern (<a
-          href="http://brutforce.com/the-vernacular-of-tom-patterson/"
-          ><u>The Vernacular of Tom Patterson</u></a
-        >, 2015)
-      </p>
 
-      <p>
-        Tom Patterson has been writing about contemporary folk, visionary, and
-        outsider art for forty years and established a reputation as an
-        independently authoritative, critical voice in the field. He has
-        authored definitive books about this art and curated major exhibitions
-        that have had a significant influence on the field’s development.
-      </p>
+    <div class="frontPageTextBox">
+
+    <p>
+      Tom Patterson has been writing about contemporary folk, visionary, and
+      outsider art for forty years and established a reputation as an
+      independently authoritative, critical voice in the field. He has
+      authored definitive books about this art and curated major exhibitions
+      that have had a significant influence on the field’s development.
+    </p>
+
+    <p>
+      "Art is ubiquitous in everyday life. We encounter it practically from
+      birth, even if it doesn’t always speak to us. Critic and curator Tom
+      Patterson knows this." - Julian Stern (<a
+        href="http://brutforce.com/the-vernacular-of-tom-patterson/"
+        ><u>The Vernacular of Tom Patterson</u></a
+      >, 2015)
+    </p>
+
+    </div>
+
+
+    <div class="mainImgLeftContainerBefore">
+      <img src="../images/Tom_as_a_baby.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
+      <div class="imageCaptionContainer imageCaptionContainerLeft">
+          <p class="imageCaptionText" sstyle="line-height: 2em;">Photo of Tom Patterson as an infant, born in Nashville, TN</p>
+      </div>
+  </div>
+
+  <div class="frontPageTextBox">
+
 
       <p>
         Patterson is most widely known for his lavishly color-illustrated
