--- a/app/work.html
+++ b/app/work.html
@@ -37,8 +37,7 @@
       <div class="frontPageTextBoxHeader">
         <img class="profileImg" src="../images/TomSpeaking.jpg"/>
 
-        <h1 class="headerText">Patterson's Work</h1>
-        <h3 class="headerSubText">Selections of Writings and Articles</h3>
+        <h1 class="headerText">Selections of Writings and Articles</h1>
       </div>
 
       <div class="frontPageTextBox">
