Adding Memoir Page and PDF

--- a/app/about.html
+++ b/app/about.html
@@ -18,7 +18,8 @@
       <ul class="header-content hidden">
         <li><a href="./" id="header1">- Home</a></li>
         <li><a href="./about" id="header2">- About</a></li>
-        <li><a href="./work" id="header3">- My Work</a></li>
+        <li><a href="./memoir" id="header3">- Memoir</a></li>
+        <li><a href="./work" id="header3">- Work</a></li>
         <li><a href="./upcoming" id="header4">- Upcoming</a></li>
         <li><a href="./contact" id="header5">- Contact</a></li>
       </ul>
@@ -52,31 +53,50 @@
     <div class="frontPageTextBox">
 
     <p>
-      Tom Patterson has been writing about contemporary folk, visionary, and
-      outsider art for forty years and established a reputation as an
-      independently authoritative, critical voice in the field. He has
-      authored definitive books about this art and curated major exhibitions
-      that have had a significant influence on the field’s development.
-    </p>
+        Tom Patterson has been writing about contemporary folk, visionary, and
+        outsider art for forty years and established a reputation as an
+        independently authoritative, critical voice in the field. He has
+        authored definitive books about this art and curated major exhibitions
+        that have had a significant influence on the field’s development.
+      </p>
 
-    <p>
-      "Art is ubiquitous in everyday life. We encounter it practically from
-      birth, even if it doesn’t always speak to us. Critic and curator Tom
-      Patterson knows this." - Julian Stern (<a
-        href="http://brutforce.com/the-vernacular-of-tom-patterson/"
-        ><u>The Vernacular of Tom Patterson</u></a
-      >, 2015)
-    </p>
+      <p>
+        "Art is ubiquitous in everyday life. We encounter it practically from
+        birth, even if it doesn’t always speak to us. Critic and curator Tom
+        Patterson knows this." - Julian Stern (<a
+          href="http://brutforce.com/the-vernacular-of-tom-patterson/"
+          ><u>The Vernacular of Tom Patterson</u></a
+        >, 2015)
+      </p>
 
     </div>
 
-
-    <div class="mainImgLeftContainerBefore">
-      <img src="../images/Tom_as_a_baby.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
-      <div class="imageCaptionContainer imageCaptionContainerLeft">
-          <p class="imageCaptionText" sstyle="line-height: 2em;">Photo of Tom Patterson as an infant, born in Nashville, TN</p>
+    <div class="memoirContainer">
+      <div class="memoirImageHolder">
+        <img
+          src="./images/memior_cover.jpg"
+          class="memoirCover"
+          alt="My Memoir"
+        />
       </div>
-  </div>
+      <div class="memoirDescriptionContainer">
+        <h3>Chance Operations - A Memoir by Tom Patterson</h3>
+
+        <p>
+          After at least one esteemed colleague, having been regaled with stories of my past, insisted I ought to write a memoir and goaded me repeatedly about it, I decided to take up the challenge. Writing “the story of my life” wasn’t the idea. Instead, I set out to write an account of my twenties - the decade I spent stumbling and experimenting and failing and succeeding to invent my adult, professional, social self, the mask of personal identity I wear. The project took on a life of its own and became a dominant theme for the better part of a decade, during which I’ve gone at it steadily although in necessarily piecemeal fashion, working around intermittent writing assignments, copy deadlines, curatorial projects, and other obligations undertaken for income-generating purposes.
+        </p>
+        <p>
+
+          In the latter connection, the memoir project has been a spare-time endeavor pursued for entirely personal, creative reasons, without the benefit of a publisher’s advance. The only financial support for the project to date has been a $2,500 grant from my local arts council (a Duke Energy Artist Project Fellowship from the Arts Council of Winston-Salem and Forsyth County). In order to best serve the narrative, I have extended the timeline into my early thirties, but otherwise I’ve adhered to the original idea. Two chapters have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal, and “The Convivial Anarchists” in St. Andrews Review.
+        </p>
+
+        <p style="padding-top: 25px;">
+          <b>Download Part One of the Memoir <a href="./images/Chance_Operations_Pt1.pdf" download>here.</a></b>
+        </p>
+      </div>
+    </div>
+
+
 
   <div class="frontPageTextBox">
 
@@ -95,88 +115,45 @@
         otherness.
       </p>
 
-      <p>
-        In addition to his books on St. EOM and Howard Finster, Patterson is the
-        author of “Contemporary Folk Art: Treasures from the Smithsonian
-        American Art Museum” (Watson-Guptill Publications, New York, 2001) and
-        several exhibition catalogs. Since the early 1980s his writings have
-        appeared in art magazines including afterimage, American Ceramics,
-        American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art
-        Examiner, Public Art Review and Raw Vision.
-      </p>
-    </div>
+  </div>
 
-    <div class="memoirContainer">
-      <div class="memoirImageHolder">
-        <img
-          src="./images/tom_patterson_profile.jpg"
-          class="memoirCover"
-          alt="My Memoir"
-        />
+
+    <div class="mainImgLeftContainerBefore">
+      <img src="../images/Tom_as_a_baby.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
+      <div class="imageCaptionContainer imageCaptionContainerLeft">
+          <p class="imageCaptionText" sstyle="line-height: 2em;">Photo of Tom Patterson as an infant, born in Nashville, TN</p>
       </div>
-      <div class="memoirDescriptionContainer">
-        <h3>Memoir</h3>
+  </div>
 
-        <p>
-          Augue neque gravida in fermentum. Convallis a cras semper auctor neque
-          vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras.
-          Aliquam ultrices sagittis orci a scelerisque purus semper. Donec
-          adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse
-          potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor
-          nec feugiat nisl pretium. Augue neque gravida in fermentum et
-          sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi
-          blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec.
-          Facilisis leo vel fringilla est ullamcorper eget nulla facilisi.
-          Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis
-          eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et
-          magnis dis parturient montes nascetur. Sed vulputate odio ut enim
-          blandit volutpat. Leo vel fringilla est ullamcorper eget nulla.
-          Viverra suspendisse potenti nullam ac tortor vitae purus faucibus.
-          Condimentum vitae sapien pellentesque habitant morbi.
-        </p>
-      </div>
-    </div>
 
-    <div class="frontPageTextBox">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Quis enim lobortis
-        scelerisque fermentum dui faucibus in ornare. Dui sapien eget mi proin
-        sed libero. Ultrices vitae auctor eu augue ut lectus arcu bibendum.
-        Bibendum est ultricies integer quis auctor elit sed. Gravida in
-        fermentum et sollicitudin ac. Risus ultricies tristique nulla aliquet.
-        Risus viverra adipiscing at in tellus integer feugiat scelerisque.
-        Parturient montes nascetur ridiculus mus. Egestas pretium aenean
-        pharetra magna ac. Vulputate dignissim suspendisse in est ante in. Nisl
-        rhoncus mattis rhoncus urna neque viverra justo. Ultricies leo integer
-        malesuada nunc vel risus.
-      </p>
-    </div>
+  <div class="frontPageTextBox">
+    <p>
+      In addition to his books on St. EOM and Howard Finster, Patterson is the
+      author of “Contemporary Folk Art: Treasures from the Smithsonian
+      American Art Museum” (Watson-Guptill Publications, New York, 2001) and
+      several exhibition catalogs. Since the early 1980s his writings have
+      appeared in art magazines including afterimage, American Ceramics,
+      American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art
+      Examiner, Public Art Review and Raw Vision.
+    </p>
+  </div>
 
     <div class="mainImgRightContainerBefore">
       <img
         src="../images/Tom_with_Bernard_Shatz.jpg"
         class="headerImgRight"
-        alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"
+        alt="Tom Bernard Shatz and Tom Patterson Black and White"
       />
-      <div class="imageCaptionContainer imageCaptionContainerRight"></div>
+
+
+      <div class="imageCaptionContainer imageCaptionContainerRight">
+        <span class="imageCaptionText">
+          Tom Patterson and Bernard Shatz
+
+        </span>
+      </div>
     </div>
 
-    <div class="frontPageTextBox">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Quis enim lobortis
-        scelerisque fermentum dui faucibus in ornare. Dui sapien eget mi proin
-        sed libero. Ultrices vitae auctor eu augue ut lectus arcu bibendum.
-        Bibendum est ultricies integer quis auctor elit sed. Gravida in
-        fermentum et sollicitudin ac. Risus ultricies tristique nulla aliquet.
-        Risus viverra adipiscing at in tellus integer feugiat scelerisque.
-        Parturient montes nascetur ridiculus mus. Egestas pretium aenean
-        pharetra magna ac. Vulputate dignissim suspendisse in est ante in. Nisl
-        rhoncus mattis rhoncus urna neque viverra justo. Ultricies leo integer
-        malesuada nunc vel risus.
-      </p>
-    </div>
 
     <div class="footer">
       <ul class="footerLinksContainer">
