--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,18 @@
   <link href="./hamburgers.css" rel="stylesheet">
 </head>
 <body>
-        <div class="header">
 
-            <ul class="header-content hidden">
-                <li><a href="./" id="header1">- Home</a></li>
-                <li><a href="./about" id="header2">- About</a></li>
-                <li><a href="./work" id="header3">- My Work</a></li>
-                <li><a href="./upcoming" id="header4">- Upcoming</a></li>
-                <li><a href="./contact" id="header5">- Contact</a></li>
-            </ul>
-        </div>
+    <div class="header">
+
+        <ul class="header-content hidden">
+            <li><a href="./" id="header1">- Home</a></li>
+            <li><a href="./about" id="header2">- About</a></li>
+            <li><a href="./memoir" id="header3">- Memoir</a></li>
+            <li><a href="./work" id="header3">- Work</a></li>
+            <li><a href="./upcoming" id="header4">- Upcoming</a></li>
+            <li><a href="./contact" id="header5">- Contact</a></li>
+        </ul>
+    </div>
 
         <h2 class="menu-title">
             The Nerve Museum
@@ -134,18 +136,6 @@
             </p> 
         </div>
     </div>
-
-    <div class="frontPageTextBox">
-        <p>
-            Chance Operations: Cultural Adventures osf a Fledgling Writer is what I call a picaresque memoir, structured in two parts that fall in reverse chronological order, with the first part covering the years 1977 to 1984 and the second the period from 1971 to 1977, so that the ending circles back to the beginning. It’s not so much about me as about the places where I found myself and the other people I encountered. Featuring appearances by the B-52s, John Cage, Jimmy Carter, Robert Creeley, Buckmister Fuller, Allen Ginsberg, Col. Bruce Hampton, Arto Lindsay, and the Sex Pistols, among other luminaries. 
-            At this writing about 80 per cent of each section is complete and I aim to wrap it up this year, the tail-end of the decade in which I began it. It’s high time. 
-            This final section of nervemuseum.com consists of chapters excerpted from the manuscript, you can see what I've completed so far <a href="./work">here</a>.            
-
-        </p>
-    </div>
-
-
-
 
 
     <div class="footer">
