--- a/app/contactSuccess.html
+++ b/app/contactSuccess.html
@@ -15,7 +15,8 @@
       <ul class="header-content hidden">
           <li><a href="./" id="header1">- Home</a></li>
           <li><a href="./about" id="header2">- About</a></li>
-          <li><a href="./work" id="header3">- My Work</a></li>
+          <li><a href="./memoir" id="header3">- Memoir</a></li>
+          <li><a href="./work" id="header3">- Work</a></li>
           <li><a href="./upcoming" id="header4">- Upcoming</a></li>
           <li><a href="./contact" id="header5">- Contact</a></li>
       </ul>
