--- a/app/about.html
+++ b/app/about.html
@@ -10,8 +10,9 @@
     <meta name="theme-color" content="#FF00FF" />
     <title>The Nerve Museum</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./imageAnimations.css" />
-    <link href="./hamburgers.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./hamburgers.css">
   </head>
   <body>
     <div class="header">
