--- a/app/contact.html
+++ b/app/contact.html
@@ -8,7 +8,8 @@
   <title>The Nerve Museum</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles.css">
-  <link href="./hamburgers.css" rel="stylesheet">
+  <link rel="stylesheet" href="./header.css">
+  <link rel="stylesheet" href="./hamburgers.css">
 </head>
 <body>
     <div class="header">
