--- a/app/contactSuccess.html
+++ b/app/contactSuccess.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#FF00FF">
   <title>The Nerve Museum</title>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./header.css">
   <link href="./hamburgers.css" rel="stylesheet">
 </head>
 <body>
