--- a/app/upcoming.html
+++ b/app/upcoming.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#FF00FF">
   <title>The Nerve Museum</title>
   <link rel="stylesheet" href="./styles.css">
-  <link href="./hamburgers.css" rel="stylesheet">
+  <link rel="stylesheet" href="./header.css">
+  <link rel="stylesheet" href="./hamburgers.css">
 </head>
 <body>
     <div class="header">
