minor bug fixes

--- a/app/about.html
+++ b/app/about.html
@@ -74,11 +74,11 @@
 
     <div class="memoirContainer">
       <div class="memoirImageHolder">
-        <img
+        <!-- <img
           src="./images/memior_cover.jpg"
           class="memoirCover"
           alt="My Memoir"
-        />
+        /> -->
       </div>
       <div class="memoirDescriptionContainer">
         <h3>Chance Operations - A Memoir by Tom Patterson</h3>
