restructure Work page and removing images

--- a/app/about.html
+++ b/app/about.html
@@ -19,8 +19,8 @@
       <ul class="header-content hidden">
         <li><a href="./" id="header1">- Home</a></li>
         <li><a href="./about" id="header2">- About</a></li>
-        <li><a href="./memoir" id="header3">- Memoir</a></li>
-        <li><a href="./work" id="header3">- Work</a></li>
+        <li><a href="./memoir" id="header3">- Chance Operations</a></li>
+        <li><a href="./work" id="header3">- Selected Writings</a></li>
         <li><a href="./upcoming" id="header4">- Upcoming</a></li>
         <li><a href="./contact" id="header5">- Contact</a></li>
       </ul>
@@ -119,13 +119,28 @@
   </div>
 
 
-    <div class="mainImgLeftContainerBefore">
+    <!-- <div class="mainImgLeftContainerBefore">
       <img src="../images/Tom_as_a_baby.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
       <div class="imageCaptionContainer imageCaptionContainerLeft">
           <p class="imageCaptionText" sstyle="line-height: 2em;">Photo of Tom Patterson as an infant, born in Nashville, TN</p>
       </div>
-  </div>
+    </div> -->
 
+    <div class="mainImgRightContainerBefore">
+      <img
+        src="../images/Tom_with_Bernard_Shatz.jpg"
+        class="headerImgRight"
+        alt="Tom Bernard Shatz and Tom Patterson Black and White"
+      />
+  
+  
+      <div class="imageCaptionContainer imageCaptionContainerRight">
+        <span class="imageCaptionText">
+          Tom Patterson and Bernard Shatz
+  
+        </span>
+      </div>
+    </div>
 
   <div class="frontPageTextBox">
     <p>
@@ -139,21 +154,6 @@
     </p>
   </div>
 
-    <div class="mainImgRightContainerBefore">
-      <img
-        src="../images/Tom_with_Bernard_Shatz.jpg"
-        class="headerImgRight"
-        alt="Tom Bernard Shatz and Tom Patterson Black and White"
-      />
-
-
-      <div class="imageCaptionContainer imageCaptionContainerRight">
-        <span class="imageCaptionText">
-          Tom Patterson and Bernard Shatz
-
-        </span>
-      </div>
-    </div>
 
 
     <div class="footer">
