--- a/app/contact.html
+++ b/app/contact.html
@@ -14,13 +14,13 @@
 <body>
     <div class="header">
 
-      <ul class="header-content hidden avoid-clicks">
-          <li><a href="./" id="header1">- Home</a></li>
-          <li><a href="./about" id="header2">- About</a></li>
-          <li><a href="./memoir" id="header3">- Memoir</a></li>
-          <li><a href="./work" id="header3">- Work</a></li>
-          <li><a href="./upcoming" id="header4">- Upcoming</a></li>
-          <li><a href="./contact" id="header5">- Contact</a></li>
+      <ul class="header-content hidden">
+        <li><a href="./" id="header1">- Home</a></li>
+        <li><a href="./about" id="header2">- About</a></li>
+        <li><a href="./memoir" id="header3">- Chance Operations</a></li>
+        <li><a href="./work" id="header3">- Selected Writings</a></li>
+        <li><a href="./upcoming" id="header4">- Upcoming</a></li>
+        <li><a href="./contact" id="header5">- Contact</a></li>
       </ul>
   </div>
 
