--- a/app/about.html
+++ b/app/about.html
@@ -17,15 +17,15 @@
   <body>
     <div class="header">
       <ul class="header-content hidden">
-        <li><a href="./" id="header1">- Home</a></li>
-        <li><a href="./about" id="header2">- About</a></li>
-        <li><a href="./memoir" id="header3">- Chance Operations</a></li>
-        <li><a href="./work" id="header3">- Selected Writings</a></li>
-        <li><a href="./upcoming" id="header4">- Upcoming</a></li>
-        <li><a href="./contact" id="header5">- Contact</a></li>
-      </ul>
-    </div>
-
+          <li><a href="./" id="header1">- Home</a></li>
+          <li><a href="./about" id="header2">- About</a></li>
+          <li><a href="./memoir" id="header3">- My Memoir</a></li>
+          <li><a href="./work" id="header3">- Selected Writings</a></li>
+          <li><a href="./upcoming" id="header4">- Upcoming</a></li>
+          <li><a href="./contact" id="header5">- Contact</a></li>
+        </ul>
+  
+  </div>
     <h2 class="menu-title">
       About
     </h2>
@@ -119,28 +119,19 @@
   </div>
 
 
-    <!-- <div class="mainImgLeftContainerBefore">
-      <img src="../images/Tom_as_a_baby.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
-      <div class="imageCaptionContainer imageCaptionContainerLeft">
-          <p class="imageCaptionText" sstyle="line-height: 2em;">Photo of Tom Patterson as an infant, born in Nashville, TN</p>
+    <div class="mainImgLeftContainerBefore imageContainer">
+      <div class="headerImgLeft headerImg">
+          <img class="imgClass" src="../images/Tom_with_Bernard_Shatz.jpg" alt="Tom Bernard Shatz and Tom Patterson Black and White"/>
       </div>
-    </div> -->
 
-    <div class="mainImgRightContainerBefore">
-      <img
-        src="../images/Tom_with_Bernard_Shatz.jpg"
-        class="headerImgRight"
-        alt="Tom Bernard Shatz and Tom Patterson Black and White"
-      />
-  
-  
-      <div class="imageCaptionContainer imageCaptionContainerRight">
-        <span class="imageCaptionText">
+      <div class="imageCaptionContainer imageCaptionContainerLeft"> 
+        <p class="imageCaptionText" sstyle="line-height: 2em;">
           Tom Patterson and Bernard Shatz
-  
-        </span>
-      </div>
+        </p>
     </div>
+  </div>
+
+
 
   <div class="frontPageTextBox">
     <p>
