--- a/app/memoir.html
+++ b/app/memoir.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Paul Lewis" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="theme-color" content="#FF00FF">
-  <title>The Nerve Museum</title>
+  <title>The Tom Patterson Years</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./header.css">
   <link rel="stylesheet" href="./imageAnimations.css"/>
@@ -18,7 +18,7 @@
             <ul class="header-content hidden">
                 <li><a href="./" id="header1">- Home</a></li>
                 <li><a href="./about" id="header2">- About</a></li>
-                <li><a href="./memoir" id="header3">- Chance Operations</a></li>
+                <li><a href="./memoir" id="header3">- My Memoir</a></li>
                 <li><a href="./work" id="header3">- Selected Writings</a></li>
                 <li><a href="./upcoming" id="header4">- Upcoming</a></li>
                 <li><a href="./contact" id="header5">- Contact</a></li>
@@ -27,7 +27,7 @@
         </div>
 
         <h2 class="menu-title">
-            The Nerve Museum
+            The Tom Patterson Years
         </h2>
         <div class="menu-button">
             <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
@@ -39,12 +39,15 @@
 
         <div class="parallax"></div>        
         <!-- <img class="headerImgLeft" src="../images/TapestryForTheDisappearingPeople.jpg"/> -->
-        <img class=" memoirCover" src="./images/memior_cover.jpg"/>
+        <img class=" memoirCover" src="./images/tomPattersonYearsCover.jpg"/>
         <div class="frontPageTextBoxHeader">
           <h1 class="headerText">My Memoir</h1>
-          <h3 class="headerSubText">Chance Operations: Cultural Adventures of a Fledgling Writer</h3>
+          <h3 class="headerSubText">The Tom Patterson Years: Cultural Adventures of a Fledgling Scribe</h3>
           <h3 class="headerSubText" >
             <a href="./images/Chance Operations Part 1.pdf" download>Download Part One Here.</a>
+          </h3>
+          <h3 class="headerSubText" >
+            <a href="https://www.hidingpress.com/books/the-tom-patterson-years-cultural-adventures-of-a-fledgling-scribe-jargon-117" target="_blank">Full Copies now available for Purchase!</a>
           </h3>
         </div>
 
@@ -70,9 +73,8 @@
 
         <div class="memoirContainer">
 
-            <iframe class="memoirIframe" name="Chance Operations Part 1"  allowfullscreen="true" frameborder="0" scrolling="yes"
-            width="100%" height="100%" src="./images/Chance Operations Part 1.pdf">
-             </iframe>
+            <iframe class="memoirIframe" name="Chance Operations Part 1"  allowfullscreen="true" frameborder="0" scrolling="yes" width="100%" height="100%" src="./images/Chance Operations Part 1.pdf">
+            </iframe>
 
         </div>
       
