--- a/app/work.html
+++ b/app/work.html
@@ -12,18 +12,17 @@
     <link rel="stylesheet" href="./hamburgers.css">
   </head>
   <body>
-      <div class="header">
-
-        <ul class="header-content hidden">
+    <div class="header">
+      <ul class="header-content hidden">
           <li><a href="./" id="header1">- Home</a></li>
           <li><a href="./about" id="header2">- About</a></li>
-          <li><a href="./memoir" id="header3">- Chance Operations</a></li>
+          <li><a href="./memoir" id="header3">- My Memoir</a></li>
           <li><a href="./work" id="header3">- Selected Writings</a></li>
           <li><a href="./upcoming" id="header4">- Upcoming</a></li>
           <li><a href="./contact" id="header5">- Contact</a></li>
         </ul>
   
-    </div>
+  </div>
 
       <h2 class="menu-title">
           Selected Writings
@@ -59,7 +58,7 @@
             related to the field.</p>
       </div>
 
-      <div class="frontPageTextBox">
+      <div class="collapsibleListsContainer">
 
         <div class="collapsible">
           View Individual Work
