--- a/app/memoir.html
+++ b/app/memoir.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Paul Lewis" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="theme-color" content="#FF00FF">
-  <title>The Tom Patterson Years</title>
+  <title>The Nerve Museum</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./header.css">
   <link rel="stylesheet" href="./imageAnimations.css"/>
