--- a/app/about.html
+++ b/app/about.html
@@ -45,7 +45,9 @@
 
     <div class="parallax"></div>
 
-    <img class="profileImg" src="../images/TomSpeaking.jpg" />
+    <div class="profileImgContainer">
+      <img class="profileImg" src="../images/TomSpeaking.jpg" />
+    </div>
     <div class="frontPageTextBoxHeader">
       <h1 class="headerText">About Tom Patterson</h1>
     </div>
