--- a/app/upcoming.html
+++ b/app/upcoming.html
@@ -36,74 +36,68 @@
     </div>
 
     <div class="parallax"></div>   
+    <div class="cardGallery">
+      <div class="cardContainer">
+        <div class="galleryCard">
+            <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+                <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                <div class="cardFooter">
+                  <p class="cardContent">
+                    There are many upcoming additions to this website! This is a work in progress and is constantly being updated so check back for new content soon!
 
-    <div class="cardContainer">
-      <div class="frontPageCard">
-          <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
-              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
-              <div class="cardFooter">
-                <p class="cardContent">
-                  There are many upcoming additions to this website! This is a work in progress and is constantly being updated so check back for new content soon!
-
-                </p>
+                  </p>
+                </div>
               </div>
-            </div>
-      </div>
-
-      <div class="frontPageCard">
-          <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg'); -webkit-filter: blur(5px);  filter: blur(5px);">
-              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
-              <div class="cardFooter">
-                <p class="cardContent">
-                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
-                </p>              
-              </div>
-            </div>
-      </div>
-
-      <div class="frontPageCard">
-          <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_TDial.jpg')">
-              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
-              <div class="cardFooter">
-                <p class="cardContent">
-                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
-                </p>   
-              </div>
-            </div>
-      </div>
-      <div class="frontPageCard">
-          <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
-              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
-              <div class="cardFooter">
-                <p class="cardContent">
-                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
-                </p>   
-              </div>
-            </div>
-      </div>
-
-
-
-      <div class="frontPageCard">
-          <div class="cardImageContainer">
-              <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
-            </div>
-        <div class="cardFooter">
-            Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
         </div>
-      </div>
-
-      
-      <div class="frontPageCard">
-          <div class="cardImageContainer">
-              <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
-            </div>
+        <div class="galleryCard">
+            <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg'); -webkit-filter: blur(5px);  filter: blur(5px);">
+                <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                <div class="cardFooter">
+                  <p class="cardContent">
+                    Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                  </p>              
+                </div>
+              </div>
+        </div>
+        <div class="galleryCard">
+            <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_TDial.jpg')">
+                <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                <div class="cardFooter">
+                  <p class="cardContent">
+                    Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                  </p>   
+                </div>
+              </div>
+        </div>
+        <div class="galleryCard">
+            <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+                <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                <div class="cardFooter">
+                  <p class="cardContent">
+                    Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                  </p>   
+                </div>
+              </div>
+        </div>
+        <div class="galleryCard">
+            <div class="cardImageContainer">
+                <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
+              </div>
           <div class="cardFooter">
               Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
           </div>
         </div>
-
-      <div class="spacer"></div>
+        <div class="galleryCard">
+            <div class="cardImageContainer">
+                <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
+              </div>
+            <div class="cardFooter">
+                Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+            </div>
+        </div>
+      </div>
+      <span class="btn prev"></span>
+      <span class="btn next"></span>    
     </div>
     
 
@@ -119,7 +113,7 @@
 
     <script src='./top-nav.js'></script>
     <script src='./app.js'></script>
-
+    <script src='./cardGallery.js'></script>
     <script>
 
 
